style(ActiveCallItem): fix spacing

--- a/packages/ringcentral-widgets/components/ActiveCallItem/styles.scss
+++ b/packages/ringcentral-widgets/components/ActiveCallItem/styles.scss
@@ -224,3 +224,6 @@ $fixed-avatar-width:35px;
     opacity: 0.3;
   }
 }
+.avatar+.infoWrapper{
+  margin-left: 4px;
+}
